--- a/EXPOProject/package.json
+++ b/EXPOProject/package.json
@@ -12,7 +12,11 @@
     "expo": "~48.0.5",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-native-camera": "^4.2.1",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "react-router-native": "^6.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
